--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.datasource.url=jdbc:mysql://47.96.185.234:3306/nut?useUnicode=true&charac
 spring.datasource.username=root
 spring.datasource.password=8z55MgRtE5.
 
+mybatis.configuration.map-underscore-to-camel-case=true
+
+
 
 ## 设定ftl文件路径
 #spring.freemarker.tempalte-loader-path=classpath:/templates
@@ -15,3 +18,4 @@ spring.freemarker.cache=false
 #spring.freemarker.expose-session-attributes=true
 #spring.freemarker.request-context-attribute=request
 #spring.freemarker.suffix=.ftl
+spring.resources.static-locations=classpath:/
