--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -67,6 +61,7 @@
     </dependencies>
 
     <build>
+        <finalName>nutadmin</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
