--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>1.2.58</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
