--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 server.port=8081
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.96.185.234:3306/nut?useUnicode=true&characterEncoding=utf8&useSSL=false&autoReconnect=true&rewriteBatchedStatements=true
-spring.datasource.username=root
-spring.datasource.password=8z55MgRtE5.
+
 
 mybatis.configuration.map-underscore-to-camel-case=true
 
@@ -12,7 +10,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 ## 设定ftl文件路径
 #spring.freemarker.tempalte-loader-path=classpath:/templates
 ## 关闭缓存，及时刷新，上线生产环境需要修改为true
-spring.freemarker.cache=false
+#spring.freemarker.cache=true
 #spring.freemarker.charset=UTF-8
 #spring.freemarker.check-template-location=true
 #spring.freemarker.content-type=text/html
@@ -20,4 +18,4 @@ spring.freemarker.cache=false
 #spring.freemarker.expose-session-attributes=true
 #spring.freemarker.request-context-attribute=request
 #spring.freemarker.suffix=.ftl
-spring.resources.static-locations=classpath:/
+#spring.resources.static-locations=classpath:/
