--- a/pom.xml
+++ b/pom.xml
@@ -63,12 +63,10 @@
             <artifactId>commons-codec</artifactId>
             <version>1.13</version>
         </dependency>
-
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-devtools</artifactId>-->
+<!--        </dependency>-->
 
     </dependencies>
 
