--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,10 @@
 server.port=8081
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=xxxx
+spring.datasource.username=root
+spring.datasource.password=xxxxx
 
+spring.datasource.hikari.max-lifetime=3000
 
 mybatis.configuration.map-underscore-to-camel-case=true
-
-
-
-
-## 设定ftl文件路径
-#spring.freemarker.tempalte-loader-path=classpath:/templates
-## 关闭缓存，及时刷新，上线生产环境需要修改为true
-#spring.freemarker.cache=true
-#spring.freemarker.charset=UTF-8
-#spring.freemarker.check-template-location=true
-#spring.freemarker.content-type=text/html
-#spring.freemarker.expose-request-attributes=true
-#spring.freemarker.expose-session-attributes=true
-#spring.freemarker.request-context-attribute=request
-#spring.freemarker.suffix=.ftl
-#spring.resources.static-locations=classpath:/
