--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+
 server.port=8081
+
+#
+spring.freemarker.cache=false
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://47.96.185.234:3306/nut?useUnicode=true&characterEncoding=utf8&useSSL=false&autoReconnect=true&rewriteBatchedStatements=true
@@ -8,3 +12,4 @@ spring.datasource.password=9z77MgNB#5
 spring.datasource.hikari.max-lifetime=30
 
 mybatis.configuration.map-underscore-to-camel-case=true
+#spring.devtools.livereload.enabled=true
