--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8081
 #
 spring.freemarker.cache=false
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hi.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://47.96.185.234:3306/nut?useUnicode=true&characterEncoding=utf8&useSSL=false&autoReconnect=true&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=9z77MgNB#5
